
Version 2.0.11
 * Fixed bug: rb->buf was uninitiazlied at some execution paths. Found by Andrew Filonov.
 * Fixed bug: dummy field would not appear whenever form contains only non-file fields.

Version 2.0.10
 * Change: compatibility with nginx API 0.8.11
 * Fixed bug: Prevent module from registering store path if no upload location
 was configured
 * Fixed bug: upload corrupted in case of short body + keepalive. Thanks to Dmitry
 Dedukhin.
 * Change: Return error 415 instead of 400 if request content type is not
 multipart/form-data

Version 2.0.9
 * Change: compatibility with nginx's API 0.7.52 and greater
 * Fixed bug: module directives couldn't have appeared in limit_except block
 * Added feature: directive upload_limit_rate and ability to limit upload rate
 * Change: Malformed body issues are now logged to error log instead of debug log

Version 2.0.8
 * Change: support for named locations
 * Fixed bug: crash on missing Content-Type request header
 * Fixed bug: compilation problem on amd 64

Version 2.0.7
 * Change: file size and output body size restrictions
 * Added feature: directive upload_pass_args enables forwarding
   of request arguments to a backend. Thanks to Todd Fisher.

Version 2.0.6
 * Fixed bug: zero variables in aggregate field name caused allocation
   of random amount of memory. Thanks to Dmitry Dedukhin.
 * Fixed bug: Prevent generation of a field in case of empty field name

Version 2.0.5
 * Fixed bug: prevent leaking of file descriptors on a timeout (unconfirmed problem).
 * Fixed bug: variables in field values in upload_set_form_field and
   upload_aggregate_form_field directives were not working if field name
   contained 0 variables. 
 * Added feature: directive upload_cleanup now specifies statuses,
   which initiate removal of uploaded files. Used for cleanup after
   failure of a backend.
 * Added feature: aggregate variable upload_file_crc32 allows to calculate
   CRC32 if file on the fly.